--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ a:hover, a:active {
 
 <p> </p>
 <center>
-  <a href="https://pixelationgame.github.io/rblxwebarchives/2017%20-%202018%20-%20Early%202019/index" target="_blank">2017 - 2018 - Early 2019</a>
+  <a href="https://pixelationgame.github.io/rblxwebarchives/2017%20-%202018%20-%20Early%202019/index" target="_blank">2017 - Early 2019</a>
 </center>
 
 </body>
