--- a/2017 - 2018 - Early 2019/games.html
+++ b/2017 - 2018 - Early 2019/games.html
@@ -377,7 +377,7 @@ Roblox.Endpoints.Urls = Roblox.Endpoints.Urls || {};
     <div id="navigation" class="rbx-left-col" data-behavior="left-col">
         <ul>
             <li class="text-lead">
-                <a class="text-overflow" href="https://www.roblox.com/users/81956425/profile">tieubao15</a>
+                <a class="text-overflow" href="https://www.roblox.com/users/1/profile">ROBLOX</a>
             </li>
             <li class="rbx-divider"></li>
         </ul>
@@ -385,7 +385,7 @@ Roblox.Endpoints.Urls = Roblox.Endpoints.Urls || {};
         <div class="rbx-scrollbar" data-toggle="scrollbar" onselectstart="return false;">
             <ul>
                 <li><a href="https://www.roblox.com/home" id="nav-home"><span class="icon-nav-home"></span><span>Home</span></a></li>
-                <li><a href="https://www.roblox.com/users/81956425/profile" id="nav-profile"><span class="icon-nav-profile"></span><span>Profile</span></a></li>
+                <li><a href="https://www.roblox.com/users/1/profile" id="nav-profile"><span class="icon-nav-profile"></span><span>Profile</span></a></li>
                 <li>
                     <a href="https://www.roblox.com/my/messages/#!/inbox" id="nav-message" data-count="2">
                         <span class="icon-nav-message"></span><span>Messages</span>
@@ -393,9 +393,9 @@ Roblox.Endpoints.Urls = Roblox.Endpoints.Urls || {};
                     </a>
                 </li>
                 <li>
-                    <a href="https://www.roblox.com/users/81956425/friends#!/friend-requests" id="nav-friends" data-count="23">
+                    <a href="https://www.roblox.com/users/1/friends#!/friend-requests" id="nav-friends" data-count="23">
                         <span class="icon-nav-friends"></span><span>Friends</span>
-                        <span class="notification-blue " title="23">23</span>
+                        <span class="notification-blue " title="23">0</span>
                     </a>
                 </li>
                 <li>
@@ -404,7 +404,7 @@ Roblox.Endpoints.Urls = Roblox.Endpoints.Urls || {};
                     </a>
                 </li>
                 <li>
-                    <a href="https://www.roblox.com/users/81956425/inventory" id="nav-inventory">
+                    <a href="https://www.roblox.com/users/1/inventory" id="nav-inventory">
                         <span class="icon-nav-inventory"></span><span>Inventory</span>
                     </a>
                 </li>
