--- a/2017 - 2018 - Early 2019/index.html
+++ b/2017 - 2018 - Early 2019/index.html
@@ -264,7 +264,7 @@ Roblox.Endpoints.Urls = Roblox.Endpoints.Urls || {};
             
 
 <div class="collapse navbar-collapse col-sm-6 ng-scope" id="LandingNavbar" ng-modules="roblox.formEvents">
-    <form name="loginForm" action="games.html" id="LogInForm" class="navbar-form form-inline navbar-right ng-pristine ng-valid" method="post" role="form" rbx-form-context="" context="RollerCoaster" novalidate="">
+    <form name="loginForm" action="home.html" id="LogInForm" class="navbar-form form-inline navbar-right ng-pristine ng-valid" method="post" role="form" rbx-form-context="" context="RollerCoaster" novalidate="">
         <div class="form-group has-error" id="LoginUsernameParent">
             <input id="LoginUsername" type="text" placeholder="Username" class="form-control" name="username" rbx-form-interaction="" autofocus="autofocus">
         </div>
