--- a/2017 - 2018 - Early 2019/home.html
+++ b/2017 - 2018 - Early 2019/home.html
@@ -795,7 +795,7 @@ Sys.WebForms.PageRequestManager._initialize('ctl00$ctl00$ScriptManager', 'aspnet
                 <a class="font-header-2 nav-menu-title text-header" href="https://web.roblox.com/develop">Create</a>
             </li>
             <li class="cursor-pointer">
-                <a class="font-header-2 buy-robux nav-menu-title text-header" href="https://web.roblox.com/upgrades/robux?ctx=nav">Robux</a>
+                <a class="font-header-2 buy-robux nav-menu-title text-header" href="https://web.roblox.com/upgrades/robux?ctx=nav">ROBUX</a>
             </li>
         </ul><!--rbx-navbar-->
         <div id="navbar-universal-search" class="navbar-left rbx-navbar-search col-xs-5 col-sm-6 col-md-3" data-behavior="univeral-search" role="search">
@@ -892,7 +892,7 @@ Sys.WebForms.PageRequestManager._initialize('ctl00$ctl00$ScriptManager', 'aspnet
                 <a class="font-header-2 nav-menu-title text-header" href="https://web.roblox.com/develop">Create</a>
             </li>
             <li class="cursor-pointer">
-                <a class="font-header-2 buy-robux nav-menu-title" href="https://web.roblox.com/upgrades/robux?ctx=nav">Robux</a>
+                <a class="font-header-2 buy-robux nav-menu-title" href="https://web.roblox.com/upgrades/robux?ctx=nav">ROBUX</a>
             </li>
         </ul><!--rbx-navbar-->
     </div>
@@ -903,7 +903,7 @@ Sys.WebForms.PageRequestManager._initialize('ctl00$ctl00$ScriptManager', 'aspnet
     <div id="navigation" class="rbx-left-col  gotham-font" data-behavior="left-col">
         <ul>
             <li class="text-lead">
-                <a class="text-nav font-header-2 text-overflow" href="https://web.roblox.com/users/882743874/profile">mericat123456</a>
+                <a class="text-nav font-header-2 text-overflow" href="https://web.roblox.com/users/1/profile">ROBLOX</a>
             </li>
             <li class="rbx-divider"></li>
         </ul>
@@ -917,7 +917,7 @@ Sys.WebForms.PageRequestManager._initialize('ctl00$ctl00$ScriptManager', 'aspnet
                     </a>
                 </li>
                 <li>
-                    <a href="https://web.roblox.com/users/882743874/profile" id="nav-profile" class="dynamic-overflow-container text-nav">
+                    <a href="https://web.roblox.com/users/1/profile" id="nav-profile" class="dynamic-overflow-container text-nav">
                         <div>
                             <span class="icon-nav-profile"></span>
                         </div>
@@ -1338,7 +1338,7 @@ Sys.WebForms.PageRequestManager._initialize('ctl00$ctl00$ScriptManager', 'aspnet
     </div>
 
 </div>
-<div id="TradeRequest" class="modalPopup unifiedModal smallModal TraderSystemRobux" UserID="882743874" style="display:none;">
+<div id="TradeRequest" class="modalPopup unifiedModal smallModal TraderSystemRobux" UserID="1" style="display:none;">
 	
     <div style="height:38px;padding-top:2px;">
         <span>Trade Request</span>
@@ -1541,9 +1541,9 @@ Sys.WebForms.PageRequestManager._initialize('ctl00$ctl00$ScriptManager', 'aspnet
 
                 </div>
                 <div class="col-sm-6 col-md-9">
-                    <!-- NOTE: "Roblox Corporation" is a healthcheck; be careful when updating! -->
+                    <!-- NOTE: "ROBLOX Corporation" is a healthcheck; be careful when updating! -->
                     <p class="text-footer footer-note">
-                        &#169;2019 Roblox Corporation. Roblox, the Roblox logo and Powering Imagination are among our registered and unregistered trademarks in the U.S. and other countries.
+                        &#169;2017 ROBLOX Corporation. ROBLOX, the ROBLOX logo and Powering Imagination are among our registered and unregistered trademarks in the U.S. and other countries.
                     </p>
                 </div>
             </div>
@@ -1579,7 +1579,7 @@ Sys.WebForms.PageRequestManager._initialize('ctl00$ctl00$ScriptManager', 'aspnet
         <div class="ph-installinstructions">
             <div class="ph-modal-header">
                     <span class="icon-close simplemodal-close"></span>
-                    <h3 class="title">Thanks for playing Roblox</h3>
+                    <h3 class="title">Thanks for playing ROBLOX</h3>
             </div>
             <div class="modal-content-container"> 
                 <div class="ph-installinstructions-body ">
@@ -1598,7 +1598,7 @@ Sys.WebForms.PageRequestManager._initialize('ctl00$ctl00$ScriptManager', 'aspnet
             </li>
             <li class="step3-of-4">
                 <h2>3</h2>
-                <p class="larger-font-size">Click <strong>Ok</strong> once you've successfully installed Roblox.</p>
+                <p class="larger-font-size">Click <strong>Ok</strong> once you've successfully installed ROBLOX.</p>
                 <img data-delaysrc="https://images.rbxcdn.com/3797745629baca2d1b9496b76bc9e6dc.png" />
             </li>
             <li class="step4-of-4">
@@ -1613,7 +1613,7 @@ Sys.WebForms.PageRequestManager._initialize('ctl00$ctl00$ScriptManager', 'aspnet
                 </div>
             </div>
             <div class="xsmall">
-                The Roblox installer should download shortly. If it doesn’t, start the <a id="GameLaunchManualInstallLink" href="#" class="text-link">download now.</a>
+                The ROBLOX installer should download shortly. If it doesn’t, start the <a id="GameLaunchManualInstallLink" href="#" class="text-link">download now.</a>
  <script>
                        if (Roblox.ProtocolHandlerClientInterface && typeof Roblox.ProtocolHandlerClientInterface.attachManualDownloadToLink === 'function') {
                            Roblox.ProtocolHandlerClientInterface.attachManualDownloadToLink();
@@ -1690,10 +1690,10 @@ Sys.WebForms.PageRequestManager._initialize('ctl00$ctl00$ScriptManager', 'aspnet
         },
         ProtocolHandlerStartingDialog: {
             play: {
-                content: "<img src='https://images.rbxcdn.com/6304dfebadecbb3b338a79a6a528936c.svg.gzip' width='90' height='90' alt='R'/><p>Roblox is now loading. Get ready to play!</p>"
+                content: "<img src='https://images.rbxcdn.com/6304dfebadecbb3b338a79a6a528936c.svg.gzip' width='90' height='90' alt='R'/><p>ROBLOX is now loading. Get ready to play!</p>"
             },
             studio: {
-                content: "<img src='https://images.rbxcdn.com/3da410727fa2670dcb4f31316643138a.svg.gzip' width='95' height='95' alt='R' /><p>Checking for Roblox Studio...</p>"
+                content: "<img src='https://images.rbxcdn.com/3da410727fa2670dcb4f31316643138a.svg.gzip' width='95' height='95' alt='R' /><p>Checking for ROBLOX Studio...</p>"
             },
             loader: "<span class='spinner spinner-default'></span>"
         }
@@ -1723,7 +1723,7 @@ Sys.WebForms.PageRequestManager._initialize('ctl00$ctl00$ScriptManager', 'aspnet
         </div>
         <div id="status" style="min-height:40px;text-align:center;margin:5px 20px">
             <div id="Starting" class="PlaceLauncherStatus MadStatusStarting" style="display:block">
-                Starting Roblox...
+                Starting ROBLOX...
             </div>
             <div id="Waiting" class="PlaceLauncherStatus MadStatusField">Connecting to Players...</div>
             <div id="StatusBackBuffer" class="PlaceLauncherStatus PlaceLauncherStatusBackBuffer MadStatusBackBuffer"></div>
@@ -2007,7 +2007,7 @@ $templateCache.put('cc-modal-template', $('#cc-modal-template').html()); $templa
             </div>
             <ul class="cookie-modal-padding cookie-modal-list">
                 <li>
-                    Roblox
+                    ROBLOX
                 </li>
                 <li>
                     Zendesk
@@ -2043,7 +2043,7 @@ $templateCache.put('cc-modal-template', $('#cc-modal-template').html()); $templa
 <div id="cookie-banner-wrapper" class="cookie-banner-wrapper desktop">
     <div class="alert-info cookie-banner">
         <div class="banner-item">
-            Roblox uses cookies to personalize content, provide social media features and analyze the traffic on our site. To learn about how we use cookies and how you can <a id='cookie-link-manage' href='#' class='cookie-link-manage text-name'>manage cookie preferences</a>, please refer to our <a class='text-name' href='https://web.roblox.com/info/privacy'>Privacy and Cookie Policy</a>.
+            ROBLOX uses cookies to personalize content, provide social media features and analyze the traffic on our site. To learn about how we use cookies and how you can <a id='cookie-link-manage' href='#' class='cookie-link-manage text-name'>manage cookie preferences</a>, please refer to our <a class='text-name' href='https://web.roblox.com/info/privacy'>Privacy and Cookie Policy</a>.
         </div>
         <div class="banner-item accept-btn">
             <button type="button" id="CookieLawAccept" class="btn-secondary-sm cookie-law-accept-btn">
