--- a/2017 - 2018 - Early 2019/home.html
+++ b/2017 - 2018 - Early 2019/home.html
@@ -357,8 +357,8 @@ Roblox.BundleDetector.setTiming(window.performance.timing);
     ]
     }
 </script>    <meta name="user-data"
-          data-userid="882743874"
-          data-name="mericat123456"
+          data-userid="1"
+          data-name="ROBLOX"
           data-isunder13="true" />
 
 <meta name="locale-data" 
@@ -451,7 +451,7 @@ Roblox.BundleDetector.setTiming(window.performance.timing);
             IsDisconnectOnSlowConnectionDisabled: true,
             IsSignalRClientTransportRestrictionEnabled: true,
             IsLocalStorageInRealTimeEnabled: true,
-            UserId: "882743874",
+            UserId: "1",
             IsDebuggerEnabled: "False"
         }
     </script>
@@ -878,7 +878,7 @@ Sys.WebForms.PageRequestManager._initialize('ctl00$ctl00$ScriptManager', 'aspnet
     </li>
 </ul>
     <div class="xsmall age-bracket-label text-header">
-        <span class="age-bracket-label-username font-caption-header">ROBLOX: </span>&lt;13
+        <span class="age-bracket-label-username font-caption-header">ROBLOX: </span>13+
     </div>
         </div><!-- navbar right-->
         <ul class="nav rbx-navbar hidden-md hidden-lg col-xs-12">
